<resources>
    <string name="app_name">My Audio Player App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="music_file_image">music file image</string>
    <string name="artist_name">artist name</string>
    <string name="music_file_name">music file name</string>
    <string name="now_playing">Now Playing</string>
    <string name="menu_icon">Menu icon</string>
    <string name="left_arrow_icon">left arrow icon</string>
    <string name="next_track">Next track</string>
    <string name="play">Play</string>
    <string name="prev_track">Prev track</string>
    <string name="shuffle_btn">Shuffle btn</string>
    <string name="repeat_btn">Repeat btn</string>
    <string name="song_image">song image</string>
    <string name="song_title">Song title</string>
    <string name="start_time">start time</string>
    <string name="end_time">end time</string>
    <string name="action_play">com.example.myaudioplayerapp.action.PLAY</string>
    <string name="action_pause">com.example.myaudioplayerapp.action.PAUSE</string>
    <string name="channel_name">music_player_notification_channel</string>
    <string name="channel_description">music_player_notification_description</string>
    <string name="gradient_image">gradient image</string>
    <string name="music_play_mode_icon">music play mode icon</string>
    <string name="favorite_button">Favorite button</string>
    <string name="album_name">Album Name</string>
    <string name="album_image">Album Image</string>
    <string name="gradient_background_image">gradient background image</string>
    <string name="search">search</string>
</resources>