<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/playerContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerActivity"
    android:background="@drawable/player_bg"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/player_layout_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/gradient_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/left_arrow_icon"
            android:src="@drawable/ic_chevron_left" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            >
            <TextView
                android:id="@+id/songTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/song_title"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:gravity="center"
                android:textStyle="bold"
                android:maxLines="1"
                android:ellipsize="end"
                />

            <TextView
                android:id="@+id/songArtistTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/artist_name"
                android:textColor="@color/grey"
                android:textSize="12sp"
                android:gravity="center"
                android:maxLines="1"
                android:ellipsize="end"
                />
        </LinearLayout>

        <ImageView
            android:id="@+id/menuBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/menu_icon"
            android:src="@drawable/ic_menu" />

    </LinearLayout>


    <ImageView
        android:id="@+id/songAlbumArtImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/seekbarLayout"
        android:layout_below="@id/player_layout_top"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/song_image"
        android:src="@drawable/default_album_art" />

    <RelativeLayout
        android:id="@+id/seekbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/player_layout_bottom"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        >

        <SeekBar
            android:id="@+id/playerSeekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp" />

        <TextView
            android:id="@+id/durationPlayed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/playerSeekbar"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:text="@string/start_time"
            android:textColor="@color/grey" />

        <TextView
            android:id="@+id/durationTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_time"
            android:layout_below="@id/playerSeekbar"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:textColor="@color/grey"
            />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/player_layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp"
        >

        <ImageView
            android:id="@+id/shuffleBtnImage"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:contentDescription="@string/shuffle_btn"
            android:src="@drawable/ic_shuffle_off" />

        <ImageView
            android:id="@+id/prevBtnImage"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:contentDescription="@string/prev_track"
            android:src="@drawable/ic_skip_prev" />

        <ImageView
            android:id="@+id/playBtnImage"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:contentDescription="@string/play"
            android:src="@drawable/ic_play" />

        <ImageView
            android:id="@+id/nextBtnImage"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:contentDescription="@string/next_track"
            android:src="@drawable/ic_skip_next" />

        <ImageView
            android:id="@+id/repeatBtnImage"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:contentDescription="@string/repeat_btn"
            android:src="@drawable/ic_repeat_on" />

    </LinearLayout>

</RelativeLayout>